--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "homepage": "https://github.com/balaurzor/jakub_dev#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "sqlite3": "^4.1.0"
+    "express": "~4.17.1",
+    "sqlite3": "~4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4",
-    "standard": "^14.3.1"
+    "nodemon": "~1.19.4",
+    "standard": "~14.3.1"
   }
 }
