--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "App developed during mentorship",
   "main": "config.js",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "npx concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "postinstall": "concurrently \"npm run i:server\" \"npm run i:db\" \"npm run i:client\"",
+    "postinstall": "npx concurrently \"npm run i:server\" \"npm run i:db\" \"npm run i:client\"",
     "i:server": "(cd server && npm install);",
     "i:db": "(cd db && npm install);",
     "i:client": "(cd client && npm install);"
@@ -16,7 +16,6 @@
     "type": "git",
     "url": "git+https://github.com/balaurzor/jakub_dev.git"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -25,6 +24,6 @@
   },
   "homepage": "https://github.com/balaurzor/jakub_dev#readme",
   "devDependencies": {
-    "concurrently": "^5.0.0"
+    "concurrently": "^5.3.0"
   }
 }
